[gd_scene load_steps=4 format=3 uid="uid://ck10x87e80gkh"]

[ext_resource type="Script" path="res://interface/interface_in_game.gd" id="1_6f1hp"]
[ext_resource type="PackedScene" uid="uid://bmc2k7f57nwts" path="res://interface/pause_menu.tscn" id="1_h5dco"]

[sub_resource type="ViewportTexture" id="ViewportTexture_qdble"]

[node name="interface_in_game" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_6f1hp")

[node name="MenuButton" type="Button" parent="."]
process_mode = 3
offset_left = 1645.0
offset_top = 44.0
offset_right = 1872.0
offset_bottom = 131.0
theme_override_font_sizes/font_size = 35
text = "menu
"

[node name="Label" type="Label" parent="."]
offset_left = 84.0
offset_top = 79.0
offset_right = 326.0
offset_bottom = 176.0
theme_override_font_sizes/font_size = 50
text = "DAY: LAST
"

[node name="ScreenDimming" type="ColorRect" parent="."]
offset_left = -34.0
offset_top = -28.0
offset_right = 1945.0
offset_bottom = 1130.0
color = Color(0.352941, 0.352941, 0.352941, 0.839216)

[node name="PauseMenu" parent="." instance=ExtResource("1_h5dco")]
process_mode = 2
visible = false

[node name="Panel" parent="PauseMenu" index="0"]
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="VBoxContainer" parent="PauseMenu/Panel" index="0"]
offset_top = -275.0
offset_bottom = 275.0

[node name="Resume" parent="PauseMenu/Panel/VBoxContainer" index="0"]
icon = SubResource("ViewportTexture_qdble")

[node name="Save" parent="PauseMenu/Panel/VBoxContainer" index="1"]
icon = SubResource("ViewportTexture_qdble")

[node name="Load" parent="PauseMenu/Panel/VBoxContainer" index="2"]
icon = SubResource("ViewportTexture_qdble")

[node name="Quit" parent="PauseMenu/Panel/VBoxContainer" index="3"]
icon = SubResource("ViewportTexture_qdble")

[node name="Label" parent="PauseMenu/Panel" index="1"]
offset_left = -128.0
offset_top = -448.0
offset_right = 108.0
offset_bottom = -328.16

[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/Quit" to="." method="_on_quit_pressed"]

[editable path="PauseMenu"]
